Preventing explore tabs from overflowing explore tabs

--- a/frontend/styles/Explore.module.scss
+++ b/frontend/styles/Explore.module.scss
@@ -1,4 +1,5 @@
 .filters {
+    margin-top: 1px;
     position: sticky;
     top: var(--navbar-height);
     padding: var(--spacing-primary) 0;
